--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,14 @@ li{
     border-left: 1px solid white;
     border-right: 1px solid white;
 }
-
+.esquerda{
+    float: right;
+    text-align: center;
+    
+}
+p img{
+    background-color: rgba(255, 255, 255, 0.3);
+}
 
 
 
