--- a/assets/css/main2tri.css
+++ b/assets/css/main2tri.css
@@ -1,13 +1,20 @@
 body{
     background-color: black;
-    background-image: url(fundo-de-madeira.jpg);
+    background-image: url(fundo2.jpg);
     background-repeat: repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    color: rgb(255, 255, 255);
+    text-shadow: 
+             -1px -1px 0px rgb(0, 0, 0), 
+             -1px 1px 0px rgb(0, 0, 0),                    
+              1px -1px 0px rgb(0, 0, 0),                  
+              1px 0px 0px rgb(0, 0, 0);
     
 }
+
 body , ul{
 
     margin: 0px;
@@ -23,6 +30,7 @@ html,body{
    text-align: start;
    
 }
+
 h1{
     color: white;
     text-align: center;
@@ -33,10 +41,18 @@ h1{
 h2{
     color: white;
 }
+h2::before {
+    content: "\2A15";
+    margin-right: 2px;
+  }
 p , label{
     color: white;
     text-align: justify;
     font-size: 18px;
+}
+.bull::before{
+    content: "\2022";
+    margin-right: 2px;
 }
 a{
     color: white;
