--- a/assets/css/main2tri.css
+++ b/assets/css/main2tri.css
@@ -5,7 +5,7 @@ body{
     background-size: cover;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    height: 100%;
     color: rgb(255, 255, 255);
     text-shadow: 
              -1px -1px 0px rgb(0, 0, 0), 
@@ -14,12 +14,13 @@ body{
               1px 0px 0px rgb(0, 0, 0);
     
 }
-
+iframe{
+    margin-left: auto;
+    margin-right: auto;
+}
 body , ul{
-
     margin: 0px;
     padding: 0px;
-
 }
 html,body{
     margin: 0;
@@ -28,9 +29,7 @@ html,body{
 }
 .top{
    text-align: start;
-   
 }
-
 h1{
     color: white;
     text-align: center;
@@ -68,8 +67,6 @@ footer p{
 .ifrs{
     float: right;
 }
-
-
 button{
         background-color: rgba(0, 0, 0, 0.836);
         text-align: center;
@@ -83,12 +80,11 @@ button{
 .selected{
     color: red;
 }
-
 button:hover{
         width: 62%;
         height: 52px;
         transition: 100ms linear;
-    }
+}
 .center{
         text-align: center;
         display: block;
@@ -129,7 +125,6 @@ input[type=button]:hover{
     text-align: center;
     display: block;
     margin: auto;
-
 }
 .fundoexemplos{
     background-color: rgba(179, 179, 179, 0.5);
@@ -150,6 +145,7 @@ background-color: rgba(0, 0, 0, 0.322);
 }
 .direita{
     text-align: right;
+    float: right;
 }
 .lcima{
     text-decoration: overline;
@@ -171,27 +167,14 @@ li{
     border-left: 1px solid white;
     border-right: 1px solid white;
 }
-.esquerda{
-    float: right;
-    text-align: center;
-    
-}
 p img{
     background-color: rgba(255, 255, 255, 0.3);
 }
-
-
-
-
-
-
 li:hover{
     border-radius: 16px;
     background-color: rgba(0,0,0,0.5);
     transition: 500ms linear; 
 }
-
-
 #logo {
     font-size: 1.5 rem;
     font-weight: bold;
