--- a/assets/css/main3tri.css
+++ b/assets/css/main3tri.css
@@ -90,7 +90,7 @@ button:hover{
         margin: auto;
         width: 50%;
     }
-input[type=text]{
+input[type=text],[type=number]{
     text-align: center;
     display: block;
     margin: auto;
@@ -103,6 +103,15 @@ input[type=text]{
     border-radius: 17px;
     border-color: white;
 }
+input[type=number]::-webkit-inner-spin-button { 
+    width: 30px;
+    height: 50px;
+    margin: 17px;
+    padding: 5px;
+    transform: rotate(90deg);
+    filter: sepia(100%) hue-rotate(90deg);
+    cursor: pointer;
+  }
 input[type=button]{
     border-radius: 12px;
     width: 50%;
